# omop-vocab-llm-rag

./: .gitignore  README.md  lab_test_prompt_beginning.md  lab_test_prompt_end_option_1_concept_guess.md  lab_test_prompt_end_option_2_choice_review.md  medication_prompt_beginning.md  medication_prompt_end_option_1_concept_guess.md  medication_prompt_end_option_2_choice_review.md  pyproject.toml
.devcontainer/: devcontainer.json
data/lab/: lab_events.csv  lab_events_random_100.csv
data/meds/: ouh_meds_random_100.csv
omop_vocab_llm_rag/: claude_client.py  cli.py  config.py  config_labs.py  config_meds.py  embedder.py  guess.py  guess_check.py  io_utils.py  prompts.py  rag.py  retrieve.py  review.py  verify.py
